# MapWoader

./: .gitignore  CMakeLists.txt  README.md
resources/: map.xblock
shaders/: fragment.glsl  vertex.glsl
src/: block.cpp  block.h  camera.cpp  camera.h  main.cpp  mesh.h  meshloader.cpp  meshloader.h  shader.cpp  shader.h  texture_manager.h  textureloader.cpp  textureloader.h  textures_manager.cpp
